--- a/syllabus.hbs
+++ b/syllabus.hbs
@@ -48,7 +48,7 @@
       <div class="container">
         <div class="hero-unit">
           <div class="col-xs-9">
-            <h3>Syllabus</h3>
+            <h3>{{ title }}</h3>
           </div>
         </div>
       </div>
@@ -58,47 +58,12 @@
     <div class="container">
         <section class="course_content">
           <h4>Course Content</h4>
-          <p>Students and scholars in the humanities generally rely on prefabricated 
-tools to guide and instruct their research and are reluctant to engage with 
-computers and technology through coding. This remains a major distinction 
-between the humanities and the sciences. The sciences design, create and 
-maintain their own relevant digital research environments and tools, while 
-the humanities make do with prefabricated, and often inappropriate, tools.</p>
-<p>At the moment, there are no broadly available academic programming courses 
-aimed at humanities scholars. However, coding skills are needed more now than 
-ever, and even more so in the future:</p>
-<ol>
-<li>They help students and researchers to understand the various 
-technologically mediated objects that they are studying.</li>
-<li>Developing custom tools, rather than using ready-made ones, can improve the 
-actual practice of humanities research as well as (the quantity and quality) 
-of its output.</li>
-<li>There is an ever-growing demand in the public and private sector for 
-academics who can read and write code.</li>
-</ol>
-<p>After completion of the module you will be able to: </p>
-<ol>
-<li>Apply knowledge of basic programming building blocks that carry over to 
-almost all programming languages;</li>
-<li>Demonstrate knowledge of web-based, client and server side services;</li>
-<li>Display insight in technological aspects of humanities research;</li>
-<li>Apply skills in analysing humanities questions and material from a coding perspective;</li>
-<li>Reflect on experience in project-based collaborative humanities research.</li>
-</ol>
-
+          {{{markdown course_content}}}
         </section>
 
         <section class="time_requirement">
           <h4>Time Requirement</h4>
-          <p>This is a online-first course. This means that, including the contact hours, 
-students are required to work on this course 21 hours a week. In order to 
-make this possible, a collaborative online platform is used to offer the 
-teaching.</p>
-<p>During the course, the students will work on a group project. These 
-self-organized groups should meet regularly throughout the course. 
-Feedback on the progress, by the instructors, teaching assistants and 
-peers, is offered during the plenary sessions and on the platform.</p>
-
+          {{{markdown time_requirement}}}
         </section>
 
         <section class="schedule">
@@ -113,74 +78,48 @@ peers, is offered during the plenary sessions and on the platform.</p>
                 </tr>
               </thead>
               <tbody>
+               {{#each schedule}}
                 <tr>
-                  <td>UvA (OMHP EK.01)</td>
-                  <td>28 October</td>
-                  <td>13:00 - 17:00</td>
+                  <td>{{location}}</td>
+                  <td>{{date}}</td>
+                  <td>{{time}}</td>
                 </tr>
-                <tr>
-                  <td>LUSTlab</td>
-                  <td>4 November</td>
-                  <td>13.00 - 16:00</td>
-                </tr>
-                <tr>
-                  <td>UvA (OMHP EK.01)</td>
-                  <td>11 November</td>
-                  <td>13:00 - 17:00</td>
-                </tr>
-                <tr>
-                  <td>Sandberg (TBA)</td>
-                  <td>18 November</td>
-                  <td>13:00 - 16:00</td>
-                </tr>
-                <tr>
-                  <td>UvA (OMHP EK.01)</td>
-                  <td>25 November</td>
-                  <td>13:00 - 17:00</td>
-                </tr>
-                <tr>
-                  <td>UvA (TBA)</td>
-                  <td>2 December</td>
-                  <td>10:00 - 13:00</td>
-                </tr>
-                <tr>
-                  <td>Sandberg (TBA)</td>
-                  <td>9 December</td>
-                  <td>13:00 - 16:00</td>
-                </tr>
+               {{/each}}
               </tbody>
             </table>
           </section>
         </section>
 
+        {{#with assessment}}
         <section class="assessment">
           <h4>Assessment</h4>
-          <p><p>Build an interface that visualizes group research</p>
-</p>
+          <p>{{{markdown description}}}</p>
 
           <h5>Review</h5>
           <ul>
-            <li><p>weekly assignments</p></li>
-            <li><p>Final presentation of the group project</p></li>
+            {{#each review}}
+            <li><p>{{this}}</p></li>
+            {{/each}}
           </ul>
 
           <h5>Completion</h5>
-          <p>You pass if you completed all the weekly assignments and achieve a grade 
-of at least 5.5 on the final assessment.
-</p>
+          <p>{{completion}}</p>
 
           <h5>Criteria</h5>
           <ul>
-            <li><p>weekly assignments</p></li>
-            <li><p>Final presentation of the group project</p></li>
+            {{#each review}}
+            <li><p>{{this}}</p></li>
+            {{/each}}
           </ul>
 
           <h5>Deadlines</h5>
           <ul>
-            <li><p>Weekly Assignment (week 1 – 6)</p></li>
-            <li><p>Final Presentation (week 7)</p></li>
+            {{#each deadlines}}
+            <li><p>{{this}}</p></li>
+            {{/each}}
           </ul>
         </section>
+        {{/with}}
     </div>
 
 
